# aether

./: .gitignore  DEEP_DIVE.md  TRADER_GUIDE.md  _setup_trader.js  package-lock.json  package.json  readme.md  vercel.json
.github/workflows/: ci.yml  deploy.yml
circuits/: order_commitment.circom  package.json  range_proof.circom
contracts/: Cargo.toml  Makefile
contracts/escrow_vault/: Cargo.toml
contracts/escrow_vault/src/: lib.rs  types.rs
contracts/escrow_vault/test_snapshots/tests/: test_double_initialize_rejected.1.json  test_release_pays_amount_and_refunds_surplus.1.json  test_release_rejects_amount_over_deposit.1.json  test_release_requires_matched_status.1.json
contracts/matching_engine/: Cargo.toml
contracts/matching_engine/src/: lib.rs  types.rs
contracts/order_book/: Cargo.toml
contracts/order_book/src/: lib.rs  types.rs
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs  types.rs
contracts/zk_verifier/src/: lib.rs  match_vector.rs  test_vector.rs
frontend/: .env.example  jest.config.js  next.config.ts  package.json  tailwind.config.js
frontend/public/circuits/: balance_proof_final.zkey
frontend/src/__tests__/: format.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: WalletConnect.tsx
frontend/src/hooks/: useIsMobile.ts  useOrders.ts  useWallet.ts
frontend/src/lib/: contract.ts  stellar-sdk.ts  stellarHorizon.ts  stellarWallet.ts
relayer/: .env.example  jest.config.js  package.json  tsconfig.json
relayer/src/: config.ts  index.ts  types.ts
(+50 files in other folders)
